# 5126_project_2

./: .gitignore  EDA and Extraction (updated) (with regression).ipynb  README.md  causal_reporting_delay_flock_loss.ipynb  csv_overview.ipynb  findings.md  insight.md  pyproject.toml
data/: FAOSTAT_data_en_3-28-2026.csv
notebooks/: avian_EDA_pipeline.ipynb  flock_size_ml_notebook.ipynb
